force-app/main/default/objects/AccountScore__c/AccountScore__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Account Score Weights</label>
</CustomObject>