force-app/main/default/objects/AccountScore__c/fields/FilledFieldScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>FilledFieldScoreWeight__c</fullName>
    <label>Filled Field Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>