force-app/main/default/objects/AccountScore__c/fields/IndustryScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>IndustryScoreWeight__c</fullName>
    <label>Industry Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>