force-app/main/default/objects/AccountScore__c/fields/NumberVenuesScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>NumberVenuesScoreWeight__c</fullName>
    <label>Number Venues Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>