force-app/main/default/objects/AccountScore__c/fields/ServiceConceptScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>ServiceConceptScoreWeight__c</fullName>
    <label>Service Concept Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>