force-app/main/default/objects/AccountScore__c/fields/SuccessfulContactsScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulContactsScoreWeight__c</fullName>
    <label>Successful Contacts Score Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>